test/spec_vectors/load64/fail/module_14.wat
(module (memory i64 1) (func $load_i32 (i32.load (i64.const 0))))